--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+amqp==2.6.1
 asgiref==3.2.10
+billiard==3.6.3.0
+celery==4.4.7
 Django==3.1
 django-filter==2.3.0
 djangorestframework==3.11.1
 gunicorn==20.0.4
 importlib-metadata==1.7.0
+kombu==4.6.11
 Markdown==3.2.2
 psycopg2-binary==2.8.5
 pytz==2020.1
+redis==3.5.3
 sqlparse==0.3.1
+vine==1.3.0
 zipp==3.1.0
