Big brain time #2, install dotenv and load env vars

--- a/.gitignore
+++ b/.gitignore
@@ -343,3 +343,14 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+# Vim Session
+Session.vim
+Sessionx.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
