--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ importlib-metadata==1.7.0
 kombu==4.6.11
 Markdown==3.2.2
 psycopg2-binary==2.8.5
+python-dotenv==0.14.0
 pytz==2020.1
 redis==3.5.3
 sqlparse==0.3.1
