--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -57,7 +57,7 @@ RUN pip install --no-cache /wheels/*
 COPY ./entrypoint.prod.sh $APP_HOME
 
 # copy project
-COPY . $APP_HOME
+COPY tochka $APP_HOME
 
 # chown all the files to the app user
 RUN chown -R app:app $APP_HOME
