--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,16 +25,13 @@ services:
       - PGBOUNCER_ADMIN_USERS=${SQL_USER}
       - PGBOUNCER_POOL_MODE=transaction
       - PGBOUNCER_AUTH_TYPE=md5
-    ports:
-      - 6432:6432
     volumes:
-      - ./pgbouncer:/etc/pgbouncer/userlist
+      - ./pgbouncer:/etc/pgbouncer/userlist:ro
 
   nginx:
     build: ./nginx
     ports:
-      - 1337:80
-      - 5555:5555
+      - 80:80
     volumes:
       - static_volume:/home/app/web/staticfiles
     depends_on:
@@ -42,11 +39,12 @@ services:
     restart: on-failure:3
 
   web:
-    container_name: dev-web-tochka
     build:
       context: ./
       dockerfile: Dockerfile.prod
     command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
+    env_file:
+      - .env
     volumes:
       - static_volume:/home/app/web/staticfiles
     expose:
@@ -60,8 +58,12 @@ services:
     restart: on-failure:3
 
   celery:
-    build: .
+    build:
+      context: ./
+      dockerfile: Dockerfile.prod
     command: celery -A config worker -l info
+    env_file:
+      - .env
     volumes:
       - static_volume:/home/app/web/staticfiles
     depends_on:
@@ -70,8 +72,12 @@ services:
     restart: on-failure:3
 
   celery-beat:
-    build: .
+    build:
+      context: ./
+      dockerfile: Dockerfile.prod
     command: celery -A config beat -l info
+    env_file:
+      - .env
     volumes:
       - static_volume:/home/app/web/staticfiles
     depends_on:
