--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -11,6 +11,8 @@ WORKDIR /usr/src/app
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
+ENV http_proxy "http://10.11.1.245:3128"
+ENV https_proxy "http://10.11.1.245:3128"
 
 # install psycopg2 dependencies
 RUN apk update \
@@ -39,6 +41,9 @@ RUN mkdir -p /home/app
 
 # create the app user
 RUN addgroup -S app && adduser -S app -G app
+
+ENV http_proxy "http://10.11.1.245:3128"
+ENV https_proxy "http://10.11.1.245:3128"
 
 # create the appropriate directories
 ENV HOME=/home/app
